--- a/src/webapp/test.html
+++ b/src/webapp/test.html
@@ -38,7 +38,7 @@
     <h1>SIMILE Ajax Library</h1>
     <p>This is a library that various Simile client-side software components
         are or will be based on. The official homepage for this project is
-        <a href="http://simile.mit.edu/wiki2/Ajax">here</a>.
+        <a href="http://simile.mit.edu/wiki/Ajax">here</a>.
     </p>
     
     <p>This page is a test for this library. Load it up in your browser and
