Updated jQuery to latest nightly (with fancy namespace selectors), fixed small bug in test.html, added a build.xml to bundle and all that jazz.
git-svn-id: http://simile-widgets.googlecode.com/svn/ajax/trunk@651 579c892a-5248-0410-a714-2bcf037eb5bf

--- a/src/webapp/test.html
+++ b/src/webapp/test.html
@@ -15,7 +15,7 @@
         }
     </style>
     
-    <script src="api/ajax-api.js" type="text/javascript"></script>
+    <script src="api/simile-ajax-api.js" type="text/javascript"></script>
     <script type="text/javascript">
         function onLoad() {
             var div = document.createElement("div");
